<?xml version="1.0" encoding="utf-8"?>
<!-- Déclaration de la mise en page principale utilisant ConstraintLayout -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Image en haut de l'écran servant d'en-tête visuel -->
    <ImageView
        android:id="@+id/imageHeader"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/header"
        app:layout_constraintTop_toTopOf="parent"/>

    <!-- Superposition transparente pour assombrir ou styliser l'en-tête -->
    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/header_layer"
        app:layout_constraintBottom_toBottomOf="@+id/imageHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <!-- Zone de texte affichée au-dessus de l'en-tête avec le nom et le slogan de l'application -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/imageHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <!-- Nom de l'application -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:includeFontPadding="false"
            android:textColor="@color/colorWhite"
            android:textSize="25sp"
            android:textStyle="bold" />

        <!-- Slogan de l'application -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tag_line"
            android:includeFontPadding="false"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />
    </LinearLayout>

    <!-- Point d'ancrage invisible pour séparer l'en-tête du reste de la mise en page -->
    <View
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:id="@+id/viewSupporter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/imageHeader"
        android:layout_marginBottom="30dp"
        />

    <!-- Bloc principal du formulaire de connexion -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/login_background"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        app:layout_constraintTop_toBottomOf="@id/viewSupporter"
        app:layout_constraintBottom_toBottomOf="parent" >

        <!-- RecyclerView pour afficher les messages -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/messageInputContainer"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="30dp" />



        <!-- Ligne contenant l'EditText et le ImageButton -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/messageInputContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@+id/sendButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <!-- EditText pour taper le message -->
            <EditText
                android:id="@+id/messageEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/entrez_un_message"
                android:padding="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/sendImageButton"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <!-- Bouton image à droite de l'EditText -->
            <ImageButton
                android:id="@+id/sendImageButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:background="@android:color/transparent"
                android:contentDescription="Envoyer une image"
                android:src="@drawable/ic_image"
                app:layout_constraintStart_toEndOf="@id/messageEditText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/messageEditText"
                app:layout_constraintBottom_toBottomOf="@id/messageEditText" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Bouton d'envoi du message -->
        <Button
            android:id="@+id/sendButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/primary_button_background"
            android:text="@string/send"
            android:textColor="@color/colorWhite"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>